verify OTP
